--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nestjs/swagger": "^7.4.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
@@ -21,8 +22,13 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.407.0",
     "next": "14.2.4",
+    "next-swagger-doc": "^0.4.0",
+    "next-themes": "^0.3.0",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
+    "swagger-ui-react": "^5.17.14",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -30,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/swagger-ui-react": "^4.18.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
